update, delete download task
